force-app/main/default/objects/Survey_Response__c/fields/Imporvement_Comments__c.field-meta.xml
<CustomField>
    <fullName>Imporvement_Comments__c</fullName>
    <label>improvement Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>