force-app/main/default/objects/Survey_Response__c/fields/Rating_Value__c.field-meta.xml
<CustomField>
    <fullName>Rating_Value__c</fullName>
    <label>Rating Value</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>