force-app/main/default/objects/Survey_Response__c/fields/Response_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Response_Date_Time__c</fullName>
    <label>Response Date/Time</label>
    <type>DateTime</type>
</CustomField>