force-app/main/default/objects/Survey_Response__c/fields/Response_Submitter__c.field-meta.xml
<CustomField>
    <fullName>Response_Submitter__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>Survey_Responses</relationshipName>
    <type>Lookup</type>
</CustomField>