force-app/main/default/objects/Survey_Response__c/fields/Response_Value__c.field-meta.xml
<CustomField>
    <fullName>Response_Value__c</fullName>
    <label>Response Value</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Bad</fullName>
            </value>
            <value>
                <fullName>Neutral</fullName>
            </value>
            <value>
                <fullName>Happy</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>