force-app/main/default/objects/Survey_Response__c/fields/Survey_Weight__c.field-meta.xml
<CustomField>
    <fullName>Survey_Weight__c</fullName>
    <label>Survey Weight</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>